--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,19 +3,19 @@ body {
 	background: #fff;
   font-family: "Helvetica Neue", "Lato", helvatica, sans-serif;
   font-weight: 300;
-  font-size: 11pt;
-  line-height: 1.3em;
+  font-size: 15pt;
+  line-height: 1.5em;
 }
 
 a {
 	/* color: #ff3366; */ /* red persimmon */
 	/* color: #003beb; */ /* spring blue */
-	/* color: #53912a; */ /* awesome green */
-  color: #447F3F;
+	color: #53912a; /* awesome green */
 	text-decoration: underline;
 }
 
 a:hover {
+	color: #ff3366; /* red persimmon */
 }
 
 img {
@@ -46,10 +46,10 @@ pre {
 }
 
 h2 {
-	font-size: 18pt;
+	font-size: 24pt;
   font-weight: bold;
   text-shadow: 1px 1px 1px #ccc;
-  margin-top: 0.5em;
+  margin-top: 1.0em;
   margin-bottom: 0.5em;
 }
 
@@ -81,7 +81,6 @@ ul li:before {
 
 #header h1 {
 	/*display: none;*/
-  font-family: "Helvetica Neue", "Lato", sans-serif;
   font-size: 40pt;
   font-weight: bold;
   color: #FF5A33;
@@ -105,13 +104,16 @@ ul li:before {
 }
 
 #footer {
-  color: #222222;
-  font-size: 10pt;
+  font-size: 15pt;
   margin-top: 1em;
 }
 
 #footer a {
   color: #222222;
+}
+
+#footer a:hover {
+	color: #ff3366; /* red persimmon */
 }
 
 #email {
@@ -143,23 +145,8 @@ ul li:before {
 }
 
 .block {
-	/*background-color: transparent;*/
-  /* Fallback for web browsers that doesn't support RGBa */
-  background: rgb(255, 255, 255);
-  background: rgba(255, 255, 255, 0.9);
-  /* For IE 5.5 - 7*/
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99ffffff, endColorstr=#99ffffff);
-  /* For IE 8*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99ffffff, endColorstr=#99ffffff)";
-  
-  -webkit-border-radius: 20px; /* Safari prototype */
-  -moz-border-radius: 20px; /* Gecko browsers */
-  border-radius: 20px; /* Everything else - limited support at the moment */
-
-  /*border: 4px solid rgba(150, 150, 150, .8);*/
-  
   text-align: justify;
-	width: 500px;
+	width: 800px;
   padding: 20px;
   margin-bottom: 20px;
 }
