--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,30 +1,37 @@
 body {
-	color: #000;
-	background: #fff;
+  color: #000;
+  background: #fff;
   font-family: "Helvetica Neue", "Lato", helvatica, sans-serif;
   font-weight: 300;
-  font-size: 15pt;
+  font-size: 20px;
   line-height: 1.5em;
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 a {
-	/* color: #ff3366; */ /* red persimmon */
-	/* color: #003beb; */ /* spring blue */
-	color: #53912a; /* awesome green */
-	text-decoration: underline;
+  /* color: #ff3366; */ /* red persimmon */
+  /* color: #003beb; */ /* spring blue */
+  color: #53912a; /* awesome green */
+  text-decoration: underline;
 }
 
 a:hover {
-	color: #ff3366; /* red persimmon */
+  color: #ff3366; /* red persimmon */
 }
 
 img {
-	border: 0px;
+  border: 0px;
 }
 
 img#background {
-  /*height: 800px;*/
-  /*position: absolute;*/
   position: fixed;
   bottom: 0;
   right: 0;
@@ -34,73 +41,59 @@ img#background {
 pre {
   font-family: "inconsolata-1", "inconsolata-2", monospace;
   font-size: 14px;
-	background-color: #ffffff;
+  background-color: #ffffff;
   text-align: left;
 
   border-left: 1px solid #eeeeee;
   border-top: 1px solid #eeeeee;
   border-right: 3px solid #dddddd;
   border-bottom: 3px solid #dddddd;
-	
+  
   padding: 1em;
 }
 
 h2 {
-	font-size: 24pt;
+  font-size: 1.777em;
+  line-height: 0.8441193em;
+  margin: 0 0 0.8441193em 0;
   font-weight: bold;
   text-shadow: 1px 1px 1px #ccc;
-  margin-top: 1.0em;
-  margin-bottom: 0.5em;
 }
 
 ul {
   list-style: none;
   margin-left: 0;
   margin-top: 0;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   padding-left: 1em;
   text-indent: -1em;
 }
 
-/*
-ul li:before {
-	content: "\00BB \0020";
-  margin-left: 0em;
-}
-*/
-
 #structure {
-	position: relative;
-	height: auto;
-  /*margin-top: 150px;*/
-  width: 600px;
-	margin-left: 20px;
-  margin-top: 40px;
-	/*margin-right: auto;*/
+  position: relative;
+  height: auto;
+  width: 700px;
+  margin-left: 20px;
+  margin-top: 0;
+  padding-top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 #header h1 {
-	/*display: none;*/
-  font-size: 40pt;
+  font-size: 2.369em;
+  line-height: 0.63317856em;
+  margin-bottom: 0.63317856em;
   font-weight: bold;
   color: #FF5A33;
   text-shadow: 2px 2px 2px #ddd;
   padding-left: 20px;
-
+  margin-top: 0;
+  padding-top: 40px;
 }
 
 #header a {
-	text-decoration: none;
+  text-decoration: none;
   color: #FF5A33;
-}
-
-#header {
-	height: 60px;
-	position: relative;
-  /*
-  margin-bottom: 10px;
-	background: url("../images/title5.png") no-repeat left top;
-  */
 }
 
 #footer {
@@ -113,11 +106,11 @@ ul li:before {
 }
 
 #footer a:hover {
-	color: #ff3366; /* red persimmon */
+  color: #ff3366; /* red persimmon */
 }
 
 #email {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .floatleft {
@@ -146,9 +139,8 @@ ul li:before {
 
 .block {
   text-align: justify;
-	width: 800px;
-  padding: 20px;
-  margin-bottom: 20px;
+  width: 800px;
+  padding: 0 20px;
 }
 
 .block.intro {
@@ -162,7 +154,7 @@ ul li:before {
 }
 
 .block.thin {
-	width: 340px;
+  width: 340px;
 }
 
 .center {
@@ -170,18 +162,18 @@ ul li:before {
 }
 
 .block.green {
-	background-color: #d6e6be;
+  background-color: #d6e6be;
 }
 
 .block.blue {
-	background-color: #d5dfeb;
+  background-color: #d5dfeb;
 }
 
 .block.purple {
-	background-color: #debce3;
-	/*border: 1px solid #D679E3;*/
+  background-color: #debce3;
+  /*border: 1px solid #D679E3;*/
 }
 
 .block.red {
-	background-color: #ebdbd5;
+  background-color: #ebdbd5;
 }
