--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/default.css">
 
+        <script src="js/js.js" type="text/javascript"></script>
     </head>
     <body>
       <div id="structure">
