--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
       <div id="structure">
         <div id="header" itemscope itemtype="http://schema.org/Person">
-          <h1 itemprop="name"><a href="http://elbenshira.com">Elben Shira</a></h1>
+          <h1 itemprop="name" class="{{ page.h1_class }}"><a href="/">Elben Shira</a></h1>
         </div>
 
         {{ content }}
