--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,9 @@
 ---
+h1_class: small
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">{{ page.date | date_to_long_string }}</p>
 
 <div class="post">
 {{ content }}
