--- a/css/default.css
+++ b/css/default.css
@@ -3,7 +3,7 @@ body {
   background: #fff;
   font-family: "Helvetica Neue", "Lato", helvatica, sans-serif;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.5em;
   padding: 0;
   margin: 0;
@@ -37,19 +37,15 @@ img#background {
   right: 0;
 }
 
+code {
+  font-family: "inconsolata-1", "inconsolata-2", monospace;
+}
 
 pre {
   font-family: "inconsolata-1", "inconsolata-2", monospace;
-  font-size: 14px;
-  background-color: #ffffff;
-  text-align: left;
-
-  border-left: 1px solid #eeeeee;
-  border-top: 1px solid #eeeeee;
-  border-right: 3px solid #dddddd;
-  border-bottom: 3px solid #dddddd;
-  
-  padding: 1em;
+  border-left: 8px solid #eeeeee;
+  padding: 0 1em;
+  margin: 2em 0;
 }
 
 h2 {
@@ -57,7 +53,10 @@ h2 {
   line-height: 0.8441193em;
   margin: 0 0 0.8441193em 0;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #ccc;
+}
+
+h3 {
+  font-weight: bold;
 }
 
 ul {
@@ -74,6 +73,7 @@ ul {
   height: auto;
   background-color: rgba(255, 255, 255, 0.9);
   margin: 0 40px;
+  width: 700px;
 }
 
 #header h1 {
@@ -82,9 +82,13 @@ ul {
   margin-bottom: 0.63317856em;
   font-weight: bold;
   color: #FF5A33;
-  text-shadow: 2px 2px 2px #ddd;
   margin-top: 0;
   padding-top: 40px;
+}
+
+#header h1.small {
+  font-size: 1em;
+  line-height: 1.5em;
 }
 
 #header a {
@@ -93,7 +97,6 @@ ul {
 }
 
 #footer {
-  font-size: 15pt;
   margin-top: 1em;
 }
 
@@ -166,4 +169,8 @@ ul {
 
 .red {
   background-color: #ebdbd5;
+}
+
+.meta {
+  color: #aaa;
 }
