--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,10 @@
         <div id="footer">
           <ul>
             <li id="emailCell">
-            <span id="email" onclick="showEmail()">click to see email</span>
+            <!-- <span id="email" onclick="showEmail()">click to see email</span> -->
             </li>
-            <li><a href="http://twitter.com/elbenshira">@elbenshira</a></li>
-            <li><a href="http://www.linkedin.com/in/elbenshira">resume</a></li>
+            <li><a href="http://twitter.com/elbenshira" target="_blank">@elbenshira</a></li>
+            <!-- <li><a href="http://www.linkedin.com/in/elbenshira">resume</a></li> -->
           </ul>
         </div>
       </div>
