--- a/css/default.css
+++ b/css/default.css
@@ -2,7 +2,7 @@ body {
   color: #000;
   background: #fff;
   font-family: "Helvetica Neue", "Lato", helvatica, sans-serif;
-  font-weight: 300;
+  /* font-weight: 300; */
   font-size: 18px;
   line-height: 1.5em;
   padding: 0;
@@ -27,6 +27,12 @@ a:hover {
   color: #ff3366; /* red persimmon */
 }
 
+hr {
+  border: 1px solid #eee;
+  width: 400px;
+  margin: 2em 0;
+}
+
 img {
   border: 0px;
 }
@@ -39,6 +45,7 @@ img#background {
 
 code {
   font-family: "inconsolata-1", "inconsolata-2", monospace;
+  font-weight: bold;
 }
 
 pre {
