Add Disqus comments on blog posts. Non-black text.

--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 body {
-  color: #000;
+  color: #151111; /* Dark grey with a little of red saturation */
   background: #fff;
   font-family: "Helvetica Neue", "Lato", helvatica, sans-serif;
   /* font-weight: 300; */
