--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_long_string }}</p>
 
-<div class="post">
+<div class="post-content">
 {{ content }}
 </div>
 
