--- a/css/syntax.css
+++ b/css/syntax.css
@@ -62,3 +62,11 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+/* Elben's additions */
+.highlight .lineno {
+  color: #999;
+  margin-left: -8px;
+  border-right: 2px solid #eeeeee;
+  padding: 4px 12px 5px inherit;
+}
