Twitter intents on blog posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,10 @@ layout: default
 {{ content }}
 </div>
 
+<p class="twitter-reply">
+  <a href="https://twitter.com/intent/tweet?url=http://elbenshira.com{{ page.url }}&text=@elbenshira">Reply via Twitter</a>
+</p>
+
 <div class="disqus-comments">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
