--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="/css/default.css">
 
         <script src="js/js.js" type="text/javascript"></script>
+        <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     </head>
     <body>
       <div id="structure">
