Use em and max-width.

--- a/css/default.css
+++ b/css/default.css
@@ -126,8 +126,8 @@ ul {
 #structure {
   position: relative;
   height: auto;
-  margin: 0 40px;
-  width: 700px;
+  margin-left: 2em;
+  max-width: 700px;
 }
 
 #header h1 {
