--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,7 +2,7 @@
   font-weight: normal;
 }
 
-.highlight  { background: #ffffff; overflow: scroll; }
+.highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
