--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
     </head>
     <body>
       <div id="structure">
-        <div id="header" itemscope itemtype="http://schema.org/Person">
+        <div id="header" itemscope temtype="http://schema.org/Person">
           <h1 itemprop="name" class="{{ page.h1_class }}"><a href="/">Elben Shira</a></h1>
+          <span itemprop="additionalName" style="display: none;">Elbin Shira</span>
         </div>
 
         {{ content }}
