--- a/css/default.css
+++ b/css/default.css
@@ -126,7 +126,8 @@ ul {
 #structure {
   position: relative;
   height: auto;
-  margin-left: 2em;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 700px;
 }
 
