Move js around.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,3 +30,5 @@ layout: default
   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 </div>
+
+<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
