--- a/projects/planjure/resources/app.css
+++ b/projects/planjure/resources/app.css
@@ -67,9 +67,29 @@ body {
   margin-right: 6px;
   cursor: pointer;
   border-radius: 4px;
+
+  /* Don't highlight buttons on clicks */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .item-selector:hover, .item-selector.selected {
   border: 3px solid #09738A;
 }
 
+.item-selector.disabled {
+  background: #aaa;
+  color: #666;
+  border: 3px solid #999;
+  cursor: not-allowed;
+}
+
+.item-selector.disabled:hover {
+  /* background: #aaa; */
+  /* color: #666; */
+  border: 3px solid #999;
+}
