--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,7 @@
 body {
   color: #151311; /* Dark grey with a little of red saturation */
   background: #f9f5f1;
-  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
+  font-family: Georgia, sans-serif;
 
   /* Our base font of 18px. Line-heights, margins, and paddings calculated to
    * produce vertical rhyhtm. */
@@ -22,7 +22,7 @@ a {
   /* color: #ff3366; */ /* red persimmon */
   /* color: #003beb; */ /* spring blue */
   color: #53912a; /* awesome green */
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:hover {
@@ -98,13 +98,7 @@ pre {
  */
 
 h1 {
-  font-size: 2.369em;
-  line-height: 0.63317856em;
-  margin-bottom: 0.63317856em;
-  font-weight: bold;
-}
-
-h2 {
+  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
   font-size: 1.777em;
 
   /* This line-height calculated by pretending our base rhyhtm is at 13.5px
@@ -116,13 +110,19 @@ h2 {
   line-height: 1.266178953em;
 
   margin: 0 0 0.8441193em 0;
+  font-weight: normal;
+}
+
+h2 {
+  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
+  font-size: 1.333em;
+  line-height: 1.12528132em;
+  margin: 0 0 1.12528132em 0;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 1.333em;
-  line-height: 1.12528132em;
-  margin: 0 0 1.12528132em 0;
+  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
   font-weight: bold;
 }
 
@@ -144,20 +144,20 @@ ul {
 }
 
 #header h1 {
-  color: #FF5A33;
   margin-top: 0;
-  padding-top: 40px;
+  padding-top: 1.5em;
 }
 
 #header h1.small {
   font-size: 1em;
   line-height: 1.5em;
   margin-bottom: 1.5em;
+  font-weight: bold;
 }
 
 #header a {
   text-decoration: none;
-  color: #FF5A33;
+  color: #151311; /* Dark grey with a little of red saturation */
 }
 
 #footer {
@@ -236,11 +236,13 @@ ul {
 }
 
 .meta {
+  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
   /* Grey with reddish saturation */
   color: #b3a9a6;
 }
 
 .article-metadata {
+  font-family: "Avenir", "Helvetica Neue", helvetica, sans-serif;
   /* Grey with reddish saturation */
   color: #b3a9a6;
   font-size: 0.75em;
@@ -265,6 +267,14 @@ ul {
 }
 
 @media (max-width: 640px) {
+  body {
+    font-size: 16px;
+  }
+
+  #header h1 {
+    padding-top: 0.5em;
+  }
+
   pre {
     border-left: none;
     padding: 0;
