--- a/projects/planjure/resources/app.css
+++ b/projects/planjure/resources/app.css
@@ -3,6 +3,14 @@ body {
   font-size: 16px;
   font-family: 'Old Standard TT', serif;
   background: #ede0ce;
+
+  /* Don't highlight stuff on double clicks */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .structure {
@@ -45,6 +53,10 @@ body {
 
 #toolbar .button-row {
   margin-bottom: 10px
+}
+
+#toolbar .checkbox-row {
+  margin-top: 6px;
 }
 
 #status h2 {
