--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 h1_class: small
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h1 class="post-title">{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_long_string }}</p>
 
 <div class="post-content">
