--- a/css/default.css
+++ b/css/default.css
@@ -158,8 +158,13 @@ h1 {
    */
   line-height: 1.266178953em;
 
-  margin: 0 0 0.8441193em 0;
+  margin: 1.5em 0 0.8441193em 0;
+  /* margin: 0 0 0.8441193em 0; */
   font-weight: normal;
+}
+
+h1.post-title {
+  margin-top: 0;
 }
 
 h2 {
