--- a/css/default.css
+++ b/css/default.css
@@ -102,9 +102,9 @@ code {
   line-height: 1em; /* For some reason, 1em for monospace fonts gives us vertical rhyhtm. */
   font-weight: 400;
 
-  padding: 0.2em 0.2em 0.1em;
+  /* padding: 0.2em 0.2em 0.1em; */
   /* padding: 3px 3px 1px; */
-  background: #eee6dd;
+  /* background: #eee6dd; */
 }
 
 .highlight code {
