--- a/css/default.css
+++ b/css/default.css
@@ -66,7 +66,8 @@ a {
 }
 
 a:hover {
-  color: #ff3366; /* red persimmon */
+  text-decoration: underline;
+  /* color: #ff3366; /1* red persimmon *1/ */
 }
 
 hr {
@@ -225,7 +226,8 @@ ul.simple {
 }
 
 #footer {
-  margin-top: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 #footer a {
@@ -233,7 +235,8 @@ ul.simple {
 }
 
 #footer a:hover {
-  color: #ff3366; /* red persimmon */
+  text-decoration: underline;
+  /* color: #ff3366; /1* red persimmon *1/ */
 }
 
 #email {
