Use grey as hr, code margin colors.

--- a/css/default.css
+++ b/css/default.css
@@ -71,11 +71,12 @@ a:hover {
 }
 
 hr {
-  width: 600px;
+  width: 100%;
 
   /* The HR is 4px tall (1px top and 3px bottom border). We have a 27px
    * baseline, so this means we have 23px left. Hence 23px margin. */
-  border: 3px solid #ece5dc;
+  /* border: 3px solid #ece5dc; */
+  border: 3px solid #222;
   margin: 23px 0;
 }
 
@@ -116,7 +117,8 @@ code {
 pre {
   line-height: 1.3em;
   font-family: Consolas, "inconsolata-1", "inconsolata-2", monospace;
-  border-left: 8px solid #ece5dc;
+  /* border-left: 8px solid #ece5dc; */
+  border-left: 8px solid #e5e5e5;
   padding: 0 1em;
   margin: 1.5em 0; /* 1.5em margin to flow with default body line-height. */
 }
